--- a/index.html
+++ b/index.html
@@ -546,21 +546,18 @@
                         <span class="en">Whether you are an SMB looking to automate for the first time or a large enterprise scaling AI across departments, we would love to hear from you.</span>
                         <span class="it">Che siate una PMI che vuole automatizzare per la prima volta o una grande azienda che sta scalando l'AI tra i dipartimenti, saremo felici di ascoltarvi.</span>
                     </p>
-                    <a href="mailto:hello@two.limited" class="mailto-link">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 4L12 13 2 4"/></svg>
-                        hello@two.limited
-                    </a>
+
                 </div>
                 <div class="contact-form">
                     <a href="#" class="mailto-cta" id="meetingMailto">
                         <span class="en">Book a Meeting</span>
                         <span class="it">Prenota un Incontro</span>
                     </a>
-                    <p class="contact-note">
-                        <span class="en">Opens your email client with a pre-filled message. Just add your preferred date and send.</span>
-                        <span class="it">Apre il tuo client email con un messaggio precompilato. Aggiungi la data preferita e invia.</span>
-                    </p>
                 </div>
+                                    <a href="mailto:hello@two.limited" class="mailto-link">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 4L12 13 2 4"/></svg>
+                        hello@two.limited
+                    </a>
             </div>
         </div>
     </section>
@@ -598,7 +595,7 @@
             let subject, body;
             if (lang === 'it') {
                 subject = 'Richiesta Incontro – Two Limited';
-                body = `Ciao,\n\nVorrei sapere di più sui vostri servizi di automazione AI e vorrei fissare un incontro.\n\nLa mia disponibilità:\n[INSERISCI QUI LA TUA DATA E ORA PREFERITE]\n\nGrazie,\n[Il tuo nome]\n[La tua azienda]`;
+                body = `Ciao,\n\nVorrei sapere di più sui vostri servizi di automazione AI.\n\nSarei disponibile il:\n[INSERISCI QUI LA TUA DATA E ORA PREFERITE]\n\nGrazie,\n[Il tuo nome]\n[La tua azienda]`;
             } else {
                 subject = 'Meeting Request – Two Limited';
                 body = `Hi there,\n\nI'm interested in learning more about your AI automation services and would like to schedule a meeting.\n\nMy availability:\n[PLEASE ADD YOUR PREFERRED DATE AND TIME HERE]\n\nThank you,\n[Your name]\n[Your company]`;
