--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                             <span class="it">Reporting e Analisi</span>
                         </h3>
                         <p>
-                            <span class="en">We build automated reporting systems that surface the metrics that matter, so your leadership team can make faster, better-informed decisions&mdash;without the manual effort.</span>
+                            <span class="en">We build automated reporting systems that surface the metrics that matter, so your leadership team can make faster, better-informed decisions without the manual effort.</span>
                             <span class="it">Costruiamo sistemi di reporting automatizzati che evidenziano le metriche che contano, consentendo al vostro team di prendere decisioni pi&ugrave; rapide e informate, senza sforzo manuale.</span>
                         </p>
                     </div>
