--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
                     <span class="it">Automatizziamo<br>ci&ograve; che ti<br><em>rallenta.</em></span>
                 </h1>
                 <p class="hero-desc">
-                    <span class="en">Two is a boutique AI consultancy specialised in automating repetitive tasks and processes for SMBs and large enterprises. We focus on Marketing and Sales workflows, helping organisations accelerate their digital transformation.</span>
-                    <span class="it">Two &egrave; una boutique di consulenza AI specializzata nell'automazione di attivit&agrave; e processi ripetitivi per PMI e grandi aziende.</span>
+                    <span class="en"><b><i>two</i></b> is a boutique AI consultancy specialised in automating repetitive tasks and processes for SMBs and large enterprises. We focus on Marketing and Sales workflows, helping organisations accelerate their digital transformation.</span>
+                    <span class="it"><b><i>two</i></b> &egrave; una boutique di consulenza AI specializzata nell'automazione di attivit&agrave; e processi ripetitivi per PMI e grandi aziende.</span>
                 </p>
                 <div class="hero-actions">
                     <a href="#contact" class="btn-primary">
