--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
                 box-sizing: border-box;
             }
             .logo-item img { max-height: 22px; pointer-events: none; }
+            [data-logo="enelx"] img { transform: none; }
         }
     </style>
 </head>
