--- a/index.html
+++ b/index.html
@@ -76,14 +76,6 @@
         .logo em { color: var(--text-primary); font-style: italic; }
 
         .nav-right { display: flex; align-items: center; gap: 20px; }
-        .nav-link {
-            color: var(--text-secondary);
-            text-decoration: none;
-            font-size: 14px;
-            font-weight: 400;
-            transition: color 0.3s;
-        }
-        .nav-link:hover { color: var(--text-primary); }
 
         .lang-toggle {
             display: flex;
@@ -430,7 +422,10 @@
         <div class="container">
             <a href="#" class="logo">t<em>w</em>o</a>
             <div class="nav-right">
-                <a href="case-studies.html" class="nav-link">Case Studies</a>
+                <a href="case-studies.html" style="color:var(--text-secondary);text-decoration:none;font-size:14px;font-weight:400;transition:color 0.3s">
+                    <span class="en">Case Studies</span>
+                    <span class="it">Casi Studio</span>
+                </a>
                 <div class="lang-toggle">
                     <button class="lang-btn active" onclick="setLang('en')">EN</button>
                     <button class="lang-btn" onclick="setLang('it')">IT</button>
@@ -462,7 +457,7 @@
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none"><path d="M3 8h10M9 4l4 4-4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                     </a>
                     <a href="case-studies.html" class="btn-secondary">
-                        <span class="en">See Case Studies</span>
+                        <span class="en">Case Studies</span>
                         <span class="it">Casi Studio</span>
                     </a>
                 </div>
@@ -574,11 +569,11 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-            <p>&copy; 2026 Two Limited. <a href="/cdn-cgi/l/email-protection#bed6dbd2d2d1fecac9d190d2d7d3d7cadbda"><span class="__cf_email__" data-cfemail="721a171e1e1d3206051d5c1e1b1f1b061716">[email&#160;protected]</span></a></p>
+            <p>&copy; 2026 Two Limited. <a href="mailto:hello@two.limited">hello@two.limited</a></p>
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Nav: transparent at top, appears on scroll
         const navEl = document.querySelector('nav');
         window.addEventListener('scroll', () => {
